--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Safe mnemonic generator and analyzer for wallets"
+      content="Seed Phrase Recovery Tool"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/M.png" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MetaSafe</title>
+    <title>MetaSafe - Recover Your Seed Phrase In Seconds</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
